--- a/app/src/main/res/drawable/squircle.xml
+++ b/app/src/main/res/drawable/squircle.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle" >
 
-    <solid android:color="@color/exchange_image_background" />
+    <solid android:color="@color/background_color" />
 
     <corners
             android:radius="40dp" />
