--- a/app/src/main/res/layout/exchange_view.xml
+++ b/app/src/main/res/layout/exchange_view.xml
@@ -3,7 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/exchange_view_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
@@ -25,7 +24,7 @@
 
     <com.google.android.material.textview.MaterialTextView
             tools:text="Naira"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:id="@+id/currency_name"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
@@ -47,7 +46,8 @@
             android:background="@android:color/transparent"
             android:enabled="false"
             android:hint="@string/_0_0"
-            android:textSize="42sp"
+            android:textSize="22sp"
+            android:inputType="numberDecimal"
             android:layout_width="0dp"
             android:layout_height="0dp" />
 
