--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/parent_layout"
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background_color"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".HomeActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--    <com.google.android.material.appbar.AppBarLayout-->
-    <!--            android:id="@+id/appbar"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="?attr/actionBarSize"-->
-    <!--            app:elevation="0dp">-->
-
-    <!--        <androidx.appcompat.widget.Toolbar-->
-    <!--                android:id="@+id/toolbar"-->
-    <!--                android:theme="@style/AppToolbar"-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="match_parent">-->
-
-    <!--        </androidx.appcompat.widget.Toolbar>-->
-
-    <!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-    <fragment
-            android:id="@+id/nav_host_fragment_container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/navigation_graph"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/parent_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            app:menu="@menu/bottom_nav_menu"
+            android:layout_height="match_parent"
             android:background="@color/background_color"
-            app:itemBackground="@android:color/transparent"
-            android:layout_gravity="bottom"
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            tools:context=".home.HomeActivity">
+
+        <!--    <com.google.android.material.appbar.AppBarLayout-->
+        <!--            android:id="@+id/appbar"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="?attr/actionBarSize"-->
+        <!--            app:elevation="0dp">-->
+
+        <!--        <androidx.appcompat.widget.Toolbar-->
+        <!--                android:id="@+id/toolbar"-->
+        <!--                android:theme="@style/AppToolbar"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent">-->
+
+        <!--        </androidx.appcompat.widget.Toolbar>-->
+
+        <!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+        <fragment
+                android:id="@+id/nav_host_fragment_container"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/navigation_graph"
+                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+                app:menu="@menu/bottom_nav_menu"
+                android:background="@color/background_color"
+                app:itemBackground="@android:color/transparent"
+                android:layout_gravity="bottom"
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
