--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,6 +40,8 @@
                 app:menu="@menu/bottom_nav_menu"
                 android:background="@color/background_color"
                 app:itemBackground="@android:color/transparent"
+                app:labelVisibilityMode="selected"
+
                 android:layout_gravity="bottom"
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
