--- a/app/src/main/res/layout/currency_select_fragment.xml
+++ b/app/src/main/res/layout/currency_select_fragment.xml
@@ -1,17 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".selectcurrency.CurrencySelectFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/currencyItem_recyclerview"
+    <data>
+
+        <variable
+                name="viewmodel"
+                type="io.audioshinigami.currencyconverter.selectcurrency.PaperViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@color/background_color"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:background="@color/project_blue"
-            android:scrollbars="vertical" />
+            android:layout_height="match_parent"
+            android:minWidth="500dp"
+            android:minHeight="400dp"
+            tools:context=".selectcurrency.CurrencySelectFragment">
+
+        <com.google.android.material.textfield.TextInputLayout
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/search_layout"
+                android:hint="@string/search_currency_hint"
+                app:endIconMode="clear_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/search"
+                    android:text="@={ viewmodel.searchQuery }"
+                    android:inputType="textShortMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-</LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+                app:layout_constraintTop_toBottomOf="@id/search_layout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/currencyItem_recyclerview"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:scrollbars="vertical"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:items="@{ viewmodel.papers }"
+                tools:listitem="@layout/list_item_paper"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
