--- a/app/src/main/res/layout/list_item_paper.xml
+++ b/app/src/main/res/layout/list_item_paper.xml
@@ -11,22 +11,20 @@
 
         <variable
                 name="clickListener"
-                type="android.view.View.OnClickListener" />
+                type="kotlin.jvm.functions.Function1" />
     </data>
-    <LinearLayout
-            android:background="@color/project_blue"
-            android:orientation="horizontal"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_marginTop="8dp"
             android:paddingStart="4dp"
-            android:paddingEnd="2dp"
+            android:paddingEnd="4dp"
+            android:onClick="@{() -> clickListener.invoke(paper.code)}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
         <ImageView
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/str_flag_con"
-                android:background="@android:color/transparent"
-                android:layout_gravity="center"
                 android:layout_width="@dimen/dimen_flag_icon"
                 android:layout_height="@dimen/dimen_flag_icon"
                 app:srcCompat="@mipmap/ic_launcher"
@@ -34,16 +32,19 @@
                 android:layout_margin="4dp"
                 />
 
-        <TextView
-                android:background="@color/project_blue"
+        <com.google.android.material.textview.MaterialTextView
+                app:layout_constraintStart_toEndOf="@id/currency_flag"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="@{ paper.code }"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:textSize="@dimen/dimen_spinner_txt_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:id="@+id/currency_code"
-                android:layout_weight="31"
                 />
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
