--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,9 @@
                 app:menu="@menu/bottom_nav_menu"
                 android:background="@color/background_color"
                 app:itemBackground="@android:color/transparent"
-                app:labelVisibilityMode="selected"
+                app:labelVisibilityMode="labeled"
+                app:itemIconTint="@drawable/bottom_nav_icon_color"
+                app:itemTextAppearanceInactive="@color/bottom_icon_inactive"
                 android:layout_gravity="bottom"
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
