--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,5 +1,5 @@
-<PreferenceScreen
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory app:title="@string/pref_theme_title">
 
@@ -19,6 +19,26 @@
             app:key="@string/api_key_pref"
             app:title="@string/api_title_pref"
             app:useSimpleSummaryProvider="true" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+            app:title="App Details">
+
+        <Preference
+                app:key="open_github"
+                app:title="Source on Github">
+
+            <intent
+                    android:action="android.intent.action.VIEW"
+                    android:data="https://github.com/david-oh-git/CurrencyConverter" />
+
+        </Preference>
+
+        <Preference
+            app:key="@string/pref_version_key"
+            app:title="Version"
+            app:useSimpleSummaryProvider="true"/>
 
     </PreferenceCategory>
 
