--- a/app/src/main/res/drawable/ic_connect.xml
+++ b/app/src/main/res/drawable/ic_connect.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ MIT License
   ~
@@ -23,15 +22,13 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-
-    <dimen name="title_text_size">48sp</dimen>
-    <dimen name="dimen_edittxt_size">22sp</dimen>
-    <dimen name="dimen_flag_icon">30dp</dimen>
-    <dimen name="dimen_spinner_txt_size">21sp</dimen>
-    <dimen name="editxt_padding">10dp</dimen>
-    <dimen name="editxt_margin">4dp</dimen>
-    <dimen name="dimen_btnconvert_padd">20dp</dimen>
-    <dimen name="title_top_margin">64dp</dimen>
-    <dimen name="guideline_spacing">16dp</dimen>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M5.88,4.12L13.76,12l-7.88,7.88L8,22l10,-10L8,2z"/>
+</vector>
