--- a/app/src/main/res/layout/fragment_get_key.xml
+++ b/app/src/main/res/layout/fragment_get_key.xml
@@ -22,17 +22,110 @@
   ~ SOFTWARE.
   -->
 
-<FrameLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="io.audioshinigami.currencyconverter.getapikey.GetKeyFragment">
+        xmlns:tools="http://schemas.android.com/tools" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+        <variable
+                name="listener"
+                type="io.audioshinigami.currencyconverter.getapikey.GetKeyClickListener" />
+        
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/parent_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            tools:context="io.audioshinigami.currencyconverter.getapikey.GetKeyFragment">
 
-</FrameLayout>
+        <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/register_txtvw"
+                android:text="@string/get_api_message"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@id/top_guideline"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintEnd_toEndOf="@id/end_guideline"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/register_btn"
+                android:text="get your API"
+                android:textStyle="bold"
+                android:onClick="@{ () -> listener.launchRegisterPage() }"
+                app:layout_constraintTop_toBottomOf="@id/register_txtvw"
+                app:icon="@drawable/ic_connect"
+                app:iconGravity="end"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintEnd_toEndOf="@id/end_guideline"
+                app:elevation="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/enter_key_layout"
+                app:layout_constraintTop_toBottomOf="@id/register_btn"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintEnd_toEndOf="@id/end_guideline"
+                android:hint="@string/paste_key"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/enter_key_edittxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/submit_btn"
+                android:text="@string/save"
+                android:textStyle="bold"
+                app:listener="@{ listener }"
+                app:api_key="@{ enterKeyEdittxt.text.toString() }"
+                app:layout_constraintTop_toBottomOf="@id/enter_key_layout"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintEnd_toEndOf="@id/end_guideline"
+                app:icon="@drawable/ic_save"
+                app:iconGravity="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/top_guideline"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="32dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/bottom_guideline"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="@dimen/guideline_spacing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/end_guideline"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/guideline_spacing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/start_guideline"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/guideline_spacing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
+
