--- a/app/src/main/res/layout/fragment_get_key.xml
+++ b/app/src/main/res/layout/fragment_get_key.xml
@@ -93,11 +93,11 @@
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/enter_key_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:background="@color/card_background"
                         app:endIconMode="clear_text"
                         android:hint="@string/paste_key"
-                        app:layout_constraintVertical_weight="0.5"
+                        app:layout_constraintVertical_weight="1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
