--- a/app/src/main/res/layout/currency_select_fragment.xml
+++ b/app/src/main/res/layout/currency_select_fragment.xml
@@ -34,22 +34,22 @@
                 type="io.audioshinigami.currencyconverter.selectcurrency.PaperViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
             android:background="@color/background_color"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minWidth="500dp"
-            android:minHeight="400dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             tools:context=".selectcurrency.CurrencySelectFragment">
 
         <com.google.android.material.textfield.TextInputLayout
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
                 android:id="@+id/search_layout"
                 android:hint="@string/search_currency_hint"
                 app:endIconMode="clear_text"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -62,20 +62,19 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
         <androidx.recyclerview.widget.RecyclerView
-                app:layout_constraintTop_toBottomOf="@id/search_layout"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_below="@id/search_layout"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
                 android:id="@+id/currencyItem_recyclerview"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:contentDescription="@string/list_of_a_currencies"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
                 android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:items="@{ viewmodel.papers }"
                 tools:listitem="@layout/list_item_paper"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
 </layout>
