--- a/app/src/main/res/layout/list_item_paper.xml
+++ b/app/src/main/res/layout/list_item_paper.xml
@@ -39,7 +39,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
+            android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/card_background"
